# dMRI_dMRS_toolbox

./: .gitignore  README.md  README_dMRI.md  pyproject.toml
processing_dmrs/: Main.py  Step1_preproc.py  Step2_fitting.py
processing_dmrs/dSPECIAL_matlab_codes_Toi/: NiceDisplay_2D_bruker_JM_19022021.m  Preprocessing_FIDA_DWSPECIAL_13032024.m  convertNicoStudyFidAformat_isisoff.m  convertNicoStudyFidAformat_isison_job0.m
processing_dmrs/dSPECIAL_matlab_codes_Toi/FID-A-master/simulationTools/: sim_megapress.m  sim_press.m  sim_steam.m
scripts/: GroupStats_dMRS_CTD.py  Main_dMRI_rat.py  Main_dMRS_rat.py  Main_dMRS_rat_BDL.py  Main_dMRS_rat_CTD.py
src/dmri_dmrs_toolbox.egg-info/: PKG-INFO  SOURCES.txt
src/dmri_dmrs_toolbox/dmrs/: Step1_preproc.py  Step2_fitting.py  dmrsdata.py  dmrsmodel.py
src/dmri_dmrs_toolbox/dmrs/dSPECIAL_matlab_codes_Toi/: Create_study_bruker_JM_071221_VF_ok_PV360v3_2705_3105_120624.m  a_Create_study_Bruker_RatCryo_9p4T_EM_MB.m  b_Preprocessing_FidA_9p4T_EM_MB.m  convertNicoStudyFidAformat_isisoff_job0.m  convertNicoStudyFidAformat_isison.m  processing_dmrs_matlab.m  run_processing_dmrs_matlab.sh
src/dmri_dmrs_toolbox/dmrs/dSPECIAL_matlab_codes_Toi/FID-A-master/jm/: autophase_nicosGUI_jm.m
src/dmri_dmrs_toolbox/dmrs/dSPECIAL_matlab_codes_Toi/FID-A-master/simulationTools/: sim_laser.m  sim_press_shaped_phCyc.m  sim_spinecho.m  sim_spinecho_shaped.m  (+1 more)
src/dmri_dmrs_toolbox/dwi/: Step1_fill_study_excel.py  Step2_raw2nii2bids.py  Step3_preproc.py  Step5_get_estimates.py
src/dmri_dmrs_toolbox/misc/: atlas_functions.py  custom_functions.py
