[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dmri_dmrs_toolbox"
version = "0.1.0"
description = "dMRI and dMRS processing toolbox"
authors = [{name = "Rita Oliveira"}]
requires-python = ">=3.9"
dependencies = [
    "graymatter-swissknife>=1.4.3",
    "joblib>=1.5.3",
    "matplotlib>=3.9.4",
    "more-itertools>=10.8.0",
    "nibabel>=5.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
where = ["src"]
